--- a/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
+++ b/ClassBoard/ClassBoard/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                                     <color key="titleShadowColor" red="0.98767076497891138" green="1" blue="0.9856738355245781" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="n1o-Ku-u0t" kind="push" id="I09-Fa-8Ju"/>
+                                    <segue destination="n1o-Ku-u0t" kind="push" identifier="splashToHandout" id="I09-Fa-8Ju"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBX-kh-PVT" userLabel="ViewDocs">
@@ -91,7 +91,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="TzC-y3-G4J" kind="push" id="eaR-kv-d6I"/>
+                                    <segue destination="TzC-y3-G4J" kind="push" identifier="splashToDocument" id="eaR-kv-d6I"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELr-mR-NfR" userLabel="Invites">
@@ -104,7 +104,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="r6y-bs-y0x" kind="push" id="dG9-7f-o0U"/>
+                                    <segue destination="r6y-bs-y0x" kind="push" identifier="splashToInvites" id="dG9-7f-o0U"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xCv-ZT-KUb" userLabel="GroupBoard">
@@ -117,7 +117,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="cFw-in-See" kind="push" id="QaU-7h-pGT"/>
+                                    <segue destination="cFw-in-See" kind="push" identifier="splashToGroup" id="QaU-7h-pGT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -133,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HsH-ko-kpf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1809" y="-276"/>
+            <point key="canvasLocation" x="1826" y="-276"/>
         </scene>
         <!--Class Groups View Controller-->
         <scene sceneID="YMt-cJ-BMB">
@@ -212,7 +212,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6hn-F9-I6q"/>
+                    <navigationItem key="navigationItem" id="6hn-F9-I6q">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="Kh2-JK-4Le">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="vo2-ME-TyO">
+                                <rect key="frame" x="582" y="5" width="170" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <state key="normal" title="+">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="cFw-in-See" kind="push" id="CzW-oF-i3a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pXc-Jj-p8d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -265,7 +279,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="AeW-hE-ztA" kind="push" id="TXr-Jz-3at"/>
+                                    <segue destination="AeW-hE-ztA" kind="push" identifier="HandoutToSave" id="TXr-Jz-3at"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tlz-tz-2Td">
@@ -298,10 +312,10 @@
             </objects>
             <point key="canvasLocation" x="2980" y="-1337"/>
         </scene>
-        <!--View Controller-->
+        <!--Save Location View Controller-->
         <scene sceneID="Jdk-pO-Djs">
             <objects>
-                <viewController id="AeW-hE-ztA" sceneMemberID="viewController">
+                <viewController id="AeW-hE-ztA" customClass="SaveLocationViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pf5-fT-KGz"/>
                         <viewControllerLayoutGuide type="bottom" id="5Td-GW-EGl"/>
@@ -318,7 +332,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="OLO-kD-CH0" kind="push" id="YPU-Ug-Vmf"/>
+                                    <action selector="nextPage:" destination="AeW-hE-ztA" eventType="touchUpInside" id="TYJ-1X-CTL"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2y8-xd-tIU">
@@ -329,14 +343,38 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="File Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygd-Ez-Iwb">
+                                <rect key="frame" x="143" y="605" width="115" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XrF-R1-hWz">
+                                <rect key="frame" x="286" y="615" width="197" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="469" translatesAutoresizingMaskIntoConstraints="NO" id="WZo-05-9if">
+                                <rect key="frame" x="143" y="466" width="469" height="109"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">If you choose the same name as an exisitng file, it will override the existing file. We may eventually create a warning for that. </string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="zW8-TK-2Kf"/>
+                    <connections>
+                        <outlet property="titleTextField" destination="XrF-R1-hWz" id="ZNz-gw-raH"/>
+                        <segue destination="OLO-kD-CH0" kind="push" identifier="SaveToBoard" id="zE7-xz-jvs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XHI-ZJ-226" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4518" y="-1337"/>
+            <point key="canvasLocation" x="4534" y="-1337"/>
         </scene>
         <!--Board View Controller-->
         <scene sceneID="AeJ-ak-HxP">
@@ -392,10 +430,13 @@
                                         <rect key="frame" x="0.0" y="308" width="84" height="69"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="Save">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="saveFile:" destination="OLO-kD-CH0" eventType="touchUpInside" id="xSJ-J8-qZK"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -449,6 +490,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="5Ml-3F-uXA"/>
+        <segue reference="I09-Fa-8Ju"/>
+        <segue reference="CzW-oF-i3a"/>
     </inferredMetricsTieBreakers>
 </document>
